# misc

./: .prettierignore  index.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sledge-pdm-core-1.1.8.tgz  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: gpr_publish.yml  gpr_publish_test.yml
scripts/: copy-wasm.mjs
src/buffer/: RawPixelData.ts  gzip.ts  webp.ts
src/color/: RGBA.ts
src/project/: index.ts  version.ts
src/project/adapters/: base.ts  index.ts  v0.ts  v1.ts  v2.ts
src/project/adapters/parts/: Canvas.ts  History.ts  ImagePool.ts  ImagePoolEntry.ts  ImagePoolState.ts  Layer.ts  LayerListState.ts  Project.ts  README.md  Snapshots.ts
src/project/types/: ProjectV0.ts  ProjectV1.ts  ProjectV2.ts  base.ts  index.ts
src/types/: libwebp.d.ts
src/wasm/: Cargo.toml
src/wasm/pkg/: core_wasm.d.ts  core_wasm.js  core_wasm_bg.js  core_wasm_bg.wasm  core_wasm_bg.wasm.d.ts  frasco_wasm.d.ts  frasco_wasm.js  frasco_wasm_bg.js  frasco_wasm_bg.wasm  sledge_core_wasm.d.ts  sledge_core_wasm.js  sledge_core_wasm_bg.js  sledge_core_wasm_bg.wasm
src/wasm/src/: lib.rs
src/wasm/src/buffer/: mod.rs
test/buffer/: buffer.test.ts  gzip.test.ts  webp.e2e.test.ts  webp.test.ts
test/color/: RGBA.test.ts
test/project/: utils.ts  v0.e2e.test.ts  v1.e2e.test.ts  v1_sledgechan.sledge
wasm/libwebp/: libwebp.js  libwebp.wasm
