[package]
name = "sledge-core-wasm"
version = "0.0.1"
authors = ["innsbluck <innsbluck@gmail.com>"]
description = "wasm module for sledge/core"
license = "MIT/Apache-2.0"
edition = "2021"

[package.metadata.wasm-pack.output]
name = "@sledge-core/wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
image-webp = "0.2.4"
image = { version = "0.25.9", default-features = false, features = ["png"] }
js-sys = "0.3.81"
